--- a/stock/index.html
+++ b/stock/index.html
@@ -295,7 +295,7 @@
             </div>
         </section>
     </section>
-    <div id="splash-screen" class="d-flex h-100 align-items-center justify-content-center">
+    <div id="splash-screen" class="d-flex h-100 align-items-center justify-content-center container-fluid m-0 p-0">
         <div class="row justify-content-center">
             <div class="col-8 col-md-4">
                 <img src="https://sgp1.vultrobjects.com/img-in-th/UFPkHB.jpeg" class="img-fluid">
