--- a/stock/index.html
+++ b/stock/index.html
@@ -548,7 +548,7 @@
                         $('#check-p-reserve-date').text(res.date)
                         $('#check-p-pickup-date').text(res.pickup_date)
                         $('#check-p-customer-name').text(res.name)
-                        $(".check-div").not("#check-template").remove()
+                        $(".check-div").remove()
                         Object.keys(data).sort().forEach(function (key) {
                             let check_card = $('#check-template').clone().addclass("check-div").show()
                             let bg = $('#pickup-amount-' + key).parent().find('span').css('background-color')
